# split_dunetpc

./: README.md
first_try/: copyproducts.sh  defvars.sh  fixinclude.sh  makeduneana.sh  makedunecalib.sh  makedunecore.sh  makedunedataprep.sh  makeduneexamples.sh  makeduneopdet.sh  makeduneprototypes.sh  makedunereco.sh  makedunesim.sh  makedunesw.sh  makenewtmpproductsdir.sh  mytest11build_newdev.sh  mytest11builda.sh  oldmakeduneconfig.sh  rbtest.sh  rebuild.sh  setupsplita.sh  split_target_newdev.sh  split_targeta.sh  splitall.sh  subdirlist.txt
first_try/duneana/: CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/dunecalib/: CMakeLists.txt  dunecalib_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/dunecore/: CMakeLists.txt  dunecore_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/dunedataprep/: CMakeLists.txt  dunedataprep_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/duneexamples/: CMakeLists.txt  duneexamples_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/duneopdet/: CMakeLists.txt  duneopdet_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/duneprototypes/: CMakeLists.txt  duneprototypes_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/dunereco/: CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/dunesim/: CMakeLists.txt  dunesim_CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/dunesw/: CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/fcldeps/: fcldepgraph.dot  fcllist.txt  makedot.sh  pfd.sh  tmp.sh  tmp2.sh  tmptest.txt
first_try/include_depgraphs/: dga.dot  si.py
first_try/oldduneconfig/: CMakeLists.txt  product_deps  topCMakeLists.txt
first_try/ups_depgraph/: dg.dot  makedot.sh
